--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -54,11 +54,11 @@
 <!--      <artifactId>mongodb-driver-sync</artifactId>-->
 <!--      <version>4.9.0</version>-->
 <!--    </dependency>-->
-<!--    <dependency>-->
-<!--      <groupId>org.springframework.data</groupId>-->
-<!--      <artifactId>spring-data-mongodb</artifactId>-->
-<!--      <version>4.0.3</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-mongodb</artifactId>
+      <version>4.0.3</version>
+    </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
     <dependency>
