--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,6 +7,5 @@ spring.mail.password=ptxlwzsgcdzawfmq
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.data.mongodb.uri=mongodb+srv://yourtournamentportal:<password>@tournament-platform.ojbsz3d.mongodb.net/tournament-platform?retryWrites=true&w=majority
-#spring.data.mongodb.password=BoNqR8VR8w63tIaS
-#spring.data.mongodb.username=yourtournamentportal
+spring.data.mongodb.uri=mongodb+srv://yourtournamentportal:BoNqR8VR8w63tIaS@tournament-platform.ojbsz3d.mongodb.net/tournament-platform?retryWrites=true&w=majority
+spring.data.mongodb.auto-index-creation=false
