--- a/tournament-portal/tsconfig.json
+++ b/tournament-portal/tsconfig.json
@@ -18,6 +18,7 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
+    "types": ["googlemaps", "node"],
     "useDefineForClassFields": false,
     "lib": [
       "ES2022",
