add quartz job for duels drawing

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,5 +7,10 @@ spring.mail.password=ptxlwzsgcdzawfmq
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+using.spring.schedulerFactory=true
+
 spring.data.mongodb.uri=mongodb+srv://yourtournamentportal:BoNqR8VR8w63tIaS@tournament-platform.ojbsz3d.mongodb.net/tournament-platform?retryWrites=true&w=majority
 spring.data.mongodb.auto-index-creation=false
