--- a/tournament-portal/package.json
+++ b/tournament-portal/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@adonsio/adn-tournament": "^1.5.4",
     "@angular/animations": "^15.2.0",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
@@ -18,6 +19,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@nestjs/common": "^9.4.0",
     "@ng-bootstrap/ng-bootstrap": "^14.0.1",
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
