--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -68,11 +68,11 @@
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-context-support -->
-<!--    <dependency>-->
-<!--      <groupId>org.springframework</groupId>-->
-<!--      <artifactId>spring-context-support</artifactId>-->
-<!--      <version>6.0.8</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context-support</artifactId>
+      <version>6.0.8</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/org.quartz-scheduler/quartz -->
     <dependency>
       <groupId>org.quartz-scheduler</groupId>
